--- a/package.json
+++ b/package.json
@@ -43,5 +43,9 @@
     "prisma": "^5.9.1",
     "raw-loader": "^4.0.2",
     "tailwindcss": "^3.3.0"
+  },
+  "engines": {
+    "node": "20.x"
   }
+
 }
